--- a/config.json
+++ b/config.json
@@ -156,5 +156,7 @@
     "p2p": "single_result"
   },
   "preferredLanguages": ["English"],
-  "useCinemetaMeta": true
+  "meta": {
+    "provider": "cinemata"
+  }
 }
